--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.10.3",
+    "gulp-less": "^3.1.0",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-mocha": "^2.0.0",
