--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "devDependencies": {
     "body-parser": "^1.15.0",
+    "config": "^1.20.3",
     "cookie-session": "^2.0.0-alpha.1",
     "eslint": "^2.1.0",
     "eslint-config-xo-space": "^0.12.0",
@@ -33,7 +34,9 @@
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
     "gulp-server-livereload": "^1.7.4",
-    "mongoose": "^4.4.14"
+    "mongoose": "^4.4.14",
+    "wechat-api": "^1.27.1",
+    "wechat-oauth": "^1.1.1"
   },
   "eslintConfig": {
     "extends": "xo-space",
