use multer to upload image

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-plumber": "^1.0.0",
     "gulp-server-livereload": "^1.7.4",
     "mongoose": "^4.4.14",
+    "multer": "^1.1.0",
     "wechat-api": "^1.27.1",
     "wechat-oauth": "^1.1.1"
   },
