--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "prepublish": "gulp prepublish",
     "test": "gulp"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "multer": "^1.2.0"
+  }
 }
