--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-server-livereload": "^1.7.4",
     "mongoose": "^4.4.14",
     "multer": "^1.1.0",
+    "request": "^2.79.0",
     "wechat-api": "^1.27.1",
     "wechat-oauth": "^1.1.1"
   },
