--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webapp"
   ],
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.0",
     "config": "^1.20.3",
     "connect-mongo": "^1.2.0",
@@ -25,6 +26,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.10.3",
