--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "elasticsearch": "^12.1.3",
     "jade": "^1.11.0",
     "multer": "^1.2.0"
   }
