--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "multer": "^1.1.0",
     "request": "^2.79.0",
     "wechat-api": "^1.27.1",
-    "wechat-oauth": "^1.1.1"
+    "wechat-oauth": "^1.1.1",
+    "xto": "^1.1.7"
   },
   "eslintConfig": {
     "extends": "xo-space",
