--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.0",
     "config": "^1.20.3",
     "connect-mongo": "^1.2.0",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
     "eslint": "^2.1.0",
     "eslint-config-xo-space": "^0.12.0",
