--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   "dependencies": {
     "elasticsearch": "^12.1.3",
     "jade": "^1.11.0",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "should": "^11.2.0",
+    "supertest": "^3.0.0"
   }
 }
